...
          : Theme.of(context).colorScheme.onSurface,
    );

    return Column(
      spacing: 16,
      children: [
        Text('Streak', style: Theme.of(context).textTheme.titleLarge),
        SizedBox.square(
          dimension: 80,
          child: Stack(
            alignment: Alignment.center,
            children: [
              TweenAnimationBuilder<double>(
...
